Fix z-index interaction between Header, Dialog and Dialog content
Fix an issue where; if something with z-index: auto
is in a dialog, its placed behind the dialog.

--- a/packages/cyberstorm/src/components/Header/Header.module.css
+++ b/packages/cyberstorm/src/components/Header/Header.module.css
@@ -1,7 +1,6 @@
 .root {
   position: sticky;
   top: 0;
-  z-index: 999;
   display: flex;
   gap: var(--gap--32);
   align-items: center;
